--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,16 @@
- 
-<router-outlet></router-outlet>
+<div class="al"></div>
+<div class="container">
+ <div class="header">eKYC</div>
+ <div class='info'>*Click here to Login</div>
+ <input id='username' class='text' onfocus="handle2()" class='inc2' type="text" name="Username" placeholder='Username' value="">
+<!-- Had to remove the type "password" due to the browser user credential's autofill-->
+ <input id='password' class='pass' onfocus="handle1()" class='inc1' type="pass" name="Password" placeholder='Password' value="">
+ <button>Sign In</button>
+</div>
+<ul>
+   <li></li>
+   <li></li>
+   <li></li>
+   <li></li>
+     <li><img src="http://www.pngall.com/wp-content/uploads/2016/06/Fingerprint-Free-Download-PNG.png" style="width:100%;margin-top:-20%;"></li>
+ </ul>
