--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,246 @@
-.section-style{
-	background-attachment:inherit;
-	background-position:50% 0;
-	background-repeat:no-repeat;
-	margin:0 auto;
-	width:100%;
-	background-size:cover;
+@import url('https://fonts.googleapis.com/css?family=Roboto:100');
+.container {
+ width: 280px;
+ height: 465px;
+ margin-left: auto;
+ margin-right: 15%;
+ margin-top: 100;
+ background: rgba(5, 33, 45, 0.81);
+ max-width: 280px;
+ 
+ -webkit-box-shadow: 0px 0px 114px 2px rgba(0, 0, 0, 0.75);
+ -moz-box-shadow: 0px 0px 114px 2px rgba(0, 0, 0, 0.75);
+ box-shadow: 0px 0px 114px 2px rgba(0, 0, 0, 0.75);
+    
+ svg {
+  position: absolute;
+ }
 }
+.rect1 {
+ z-index: 1;
+ stroke-dasharray: 197 509;
+ stroke-dashoffset: -729;
+ transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
+ transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.rect2 {
+ z-index: 1;
+ stroke-dasharray: 197 509;
+ stroke-dashoffset: -1058;
+ transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
+ transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.text {
+ position: absolute;
+ margin-top: 20%;
+ border: none;
+ margin-left: 3%;
+ color: gray;
+ width: 196px;
+ height: 44px;
+ padding-left: 3px;
+ z-index: 100;
+ font-family: 'Roboto', sans-serif;
+ padding-top: 21px;
+ transition: all 600ms cubic-bezier(0.95, 0.03, 0.685, 0.22);
+ &:focus {
+  outline-width: 0;
+  font-size: 16px;
+ }
+}
+.pass {
+ position: absolute;
+ margin-top: 24%;
+ border: none;
+ margin-left: 3%;
+ color: gray;
+ width: 196px;
+ height: 44px;
+ padding-left: 3px;
+ z-index: 100;
+ font-family: 'Roboto', sans-serif;
+ padding-top: 21px;
+ transition: all 600ms cubic-bezier(0.895, 0.03, 0.685, 0.22);
+ &:focus {
+  outline-width: 0;
+  font-size: 16px;
+ }
+}
+button {
+ position: absolute;
+ z-index: 100;
+ width: 149px;
+ height: 43px;
+ border: 1px solid #fff;
+ background: #000;
+ font-family: 'Roboto', sans-serif;
+ color: #fff;
+ font-size: 16px;
+ border-radius: 22px;
+ margin-top: 30%;
+ margin-left: 5%;
+ transition: 0.5s;
+ cursor: pointer;
+ &:hover {
+  color: #000;
+  background: #fff;
+ }
+ &:focus {
+  outline-width: 0;
+ }
+}
+.header {
+ position: absolute;
+ text-align: center;
+ font-family: 'Roboto', sans-serif;
+ color: #fff;
+ font-size: 48px;
+ margin-left: 90px;
+ margin-top: 7%;
+}
+.info {
+ position: absolute;
+ text-align: center;
+ font-family: 'Roboto', sans-serif;
+ color: #BDFFBD;
+ font-size: 14px;
+ margin-left: 90px;
+ margin-top: 15%;
+}
+html{ 
+    width: 100%;
+ 	 height: 100%;
+ }
+  ul{
+ 	 height: 100%;
+ 	 width: 100%;
+ 	 display: block;
+ 	 margin: 0 auto;
+ }
+  li{
+ 	 position: absolute;
+ 	 left: 30%;
+ 	 top: 50%;
+ 	 display: block;
+ 	 background: transparent;
+ 	 border: 10px solid rgba(23,246,251, 1.0);
+ 	 border-left-color: transparent;
+ 	 border-right-color: transparent;
+ 	 border-radius: 500px;
+ 	 transition: all 0.5s ease;
+ }
+  li:last-child {
+ 	 position: absolute;
+ 	 left: 30%;
+ 	 top: 50%;
+ 	 z-index: 20;
+ 	 width: 200px;
+ 	 height: 100px;
+ 	 margin-left: -110px;
+ 	 margin-top: -110px;
+ 	 padding: 70px 0px 30px;
+ 	 background-color: rgba(8, 8, 8, 0.52);;
+ 	 border: 10px solid rgba(8,8,8,1.0);
+ 	 border-radius: 200px;
+ 	 text-shadow: 2px 2px 0px rgba(0,0,0,1);
+ 	 box-shadow: 0px 0px 30px rgba(23,246,251, 0.5);
+ 	 animation: pulseShadow 5s infinite linear;
+ }
+  li:last-child:after{
+ 	 content:'';
+ 	 border: 3px dotted rgba(22,42,43,1.0);
+ 	 border-radius: 200px;
+ 	 width: 200px;
+ 	 height: 200px;
+ 	 display: block;
+ 	 position: absolute;
+ 	 top:-3px;
+ 	 left:-3px;
+ 	 background-color: transparent;
+ 	 box-shadow: inset 0px 0px 30px rgba(0,0,0,1.0);
+ }
+  li:first-child{
+ 	 margin-left: -130px;
+ 	 margin-top: -130px;
+ 	 z-index: 2;
+ 	 width: 240px;
+ 	 height: 240px;
+ 	 border-width: 10px;
+ 	 animation: spinBG 5s infinite linear;
+ }
+  li:nth-child(2){
+ 	 margin-left: -137px;
+ 	 margin-top: -137px;
+ 	 z-index: 1;
+ 	 width: 270px;
+ 	 height: 270px;
+ 	 border-width: 2px;
+ 	 border-style: dotted;
+ 	 box-shadow: 0px 0px 20px rgba(23,246,251, .5);
+ 	 animation: spinBG2 2s infinite linear;
+ }
+  li:nth-child(3){
+ 	 margin-left: -150px;
+ 	 margin-top: -150px;
+ 	 z-index: 1;
+ 	 width: 296px;
+ 	 height: 296px;
+ 	 border-width: 2px;
+ 	 box-shadow: inset 0px 0px 25px rgba(23,246,251, .25);
+ 	 animation: spinBG 12s infinite linear;
+ }
+  li:nth-child(4){
+ 	 margin-left: -170px;
+ 	 margin-top: -170px;
+ 	 z-index: 1;
+ 	 width: 330px;
+ 	 height: 330px;
+ 	 border-width: 5px;
+ 	 border-style: solid;
+ 	 box-shadow: inset 0px 0px 25px rgba(23,246,251,1.0);
+ 	 animation: spinBG3 8s infinite linear;
+ }
+ 
+ /*-------------------------------------------
+  Animations
+ -------------------------------------------*/
+ @keyframes pulseGlow{
+ 	 0%  {text-shadow: 0px 0px 20px rgba(23,246,251, 0.75);}
+ 	 50% {text-shadow: 0px 0px 40px rgba(23,246,251, 0.5); }
+ 	 100%{text-shadow: 0px 0px 20px rgba(23,246,251, 0.75);}       
+ }
+  @keyframes pulseShadow{
+ 	 0%  {box-shadow: 0px 0px 30px rgba(23,246,251, 0.25);}
+ 	 50% {box-shadow: 0px 0px 30px rgba(23,246,251, 0.75);}
+ 	 100%{box-shadow: 0px 0px 30px rgba(23,246,251, 0.25);}        
+ }
+  @keyframes spinBG{
+ 	 0%  {transform: rotate(0deg);}
+ 	 100%{transform: rotate(360deg);}  
+ }
+  @keyframes spinBG2{
+ 	 0%{
+     	 transform: rotate(360deg);
+     	 box-shadow: 0px 0px 1px rgba(23,246,251, 0.5);
+ 	 }
+ 	 50%{
+     	 transform: rotate(180deg);
+     	 box-shadow: 0px 0px 20px rgba(23,246,251, 0.5);
+ 	 }
+ 	 100%{
+     	 transform: rotate(0deg);
+     	 box-shadow: 0px 0px 1px rgba(23,246,251, 0.5);
+ 	 } 
+ }
+  @keyframes spinBG3{
+ 	 0%{
+     	 transform: rotate(180deg);
+     	 box-shadow: 0px 0px 1px rgba(23,246,251, 0.1);
+ 	 }
+ 	 50%{
+     	 transform: rotate(0deg);
+ 	 }
+ 	 100%{
+     	 transform: rotate(-180deg);
+ 	 } 
+ }
